New latest case studies

--- a/work.html
+++ b/work.html
@@ -97,13 +97,55 @@
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p>
-                                <p class="uppercase">Mobile App DESIGN &bull; 2020</p>
-                                <h3 class="mb-4 text-3xl">Insellerate</h3>
+                                <!-- <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p> -->
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS, Mortgage CRM <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Insellerate — Revolutionizing Mortgage Applications with User-Centric Mobile Design</h3>
                             </div>
                             <img src="assets/images/insellerate.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
                         <a href="works/insellerate" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                        <div class="absolute bottom-8 left-0 bg-primary px-8 py-4">
+                            <h3 class="text-3xl">+ 800%</h3>
+                            <p>increase in new borrower applications</p>
+                        </div>
+                    </div>
+
+                    <!--Patientmatic-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-indigo-100">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <!-- <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p> -->
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS, Healthcare <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Patientmatic — Driving Practice Growth with Instant Online Presence and Seamless Patient Booking</h3>
+                            </div>
+                            <img src="assets/images/patientmatci-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/patientmatic" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                    </div>
+
+                    <!--anydone-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <!-- <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p> -->
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS, Productivity <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Optimizing Design and Code for anydone: Crafting a Responsive, Pixel-Perfect Web Experience</h3>
+                            </div>
+                            <img src="assets/images/ad-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/ad" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
@@ -113,9 +155,10 @@
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#E5E3D6]">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2024</p>
-                                <h3 class="mb-4 text-3xl">Aja Dynasty</h3>
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    B2C, E-Commerce <span class="ml-4 border-l pl-4"><img src="assets/images/nepal-flag.svg" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Redefining B2C Shopping for Aja Dynasty: A User-Centric Approach to Seamless E-commerce Design</h3>
                             </div>
                             <img src="assets/images/aja-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
@@ -129,10 +172,12 @@
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-lime-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2023</p>
-                                <h3 class="mb-4 text-3xl">The Cliff Nepal</h3>
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    Travel, Tourism <span class="ml-4 border-l pl-4"><img src="assets/images/nepal-flag.svg" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Elevating Adventure Tourism: Designing a Breathtaking Digital Experience for The Cliff Nepal</h3>
                             </div>
+
                             <img src="assets/images/cliff-showcase.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
                         <a href="works/the-cliff-nepal" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
@@ -141,7 +186,24 @@
                         </div>
                     </div>
 
-                    <!--Amooma-->
+                    <!--Hydro Steam Northwest-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    Cleaning <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Designing Hydro Steam NW: Crafting an Engaging Web Experience for a Leading Local Business</h3>
+                            </div>
+                            <img src="assets/images/hydrosteam-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/hydro-steam-nw" target="" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                    </div>
+
+                    <!--Amooma
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-cyan-50">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
@@ -155,25 +217,9 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div>-->
 
-                    <!--Hydro Steam Northwest-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
-                        <div class="overflow-hidden rounded-br-3xl">
-                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Clickagee</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2019</p>
-                                <h3 class="mb-4 text-3xl">Hydro Steam Northwest</h3>
-                            </div>
-                            <img src="assets/images/hydrosteam-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
-                        </div>
-                        <a href="works/hydro-steam-nw" target="" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
-                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
-                            <img src="assets/images/view-project-white.svg" alt="" />
-                        </div>
-                    </div>
-
-                    <!--Source Taggers-->
+                    <!--Source Taggers
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-300 ease-in-out hover:bg-sky-100">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
@@ -187,7 +233,7 @@
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
