--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -81,7 +81,10 @@
             <div class="home-hero relative rounded-b-3xl bg-black bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
                 <!--Caption-->
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
-                    <h1 class="mb-16 text-3xl font-bold md:text-5xl xl:text-8xl">Aja Dynasty</h1>
+                    <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                        B2C, E-Commerce <span class="ml-4 border-l pl-4"><img src="../assets/images/nepal-flag.svg" alt="" class="h-6" /></span>
+                    </p>
+                    <h1 class="mx-auto mb-16 max-w-5xl text-center text-3xl font-bold !leading-snug md:text-5xl xl:text-5xl">Redefining B2C Shopping for Aja Dynasty: A User-Centric Approach to Seamless E-commerce Design</h1>
                     <img src="../assets/images/aja-web.png" alt="" class="rounded-t-lg" />
                 </div>
             </div>
@@ -98,6 +101,10 @@
                         <a href="https://ajadynasty.com/" class="mt-8 inline-flex h-[52px] items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">View Live Website <i class="las la-arrow-right ml-2 -rotate-45 text-3xl"></i></a>
                     </div>
                     <div class="md:col-span-5 md:col-end-13">
+                        <div class="mb-8">
+                            <p class="mb-4 uppercase tracking-widest">Industry</p>
+                            <p>B2C, E-Commerce</p>
+                        </div>
                         <div class="mb-8">
                             <p class="mb-4 uppercase tracking-widest">Agency</p>
                             <p>Source Taggers</p>
@@ -140,6 +147,62 @@
                     <div class="md:col-span-1">
                         <h3 class="mb-4 text-2xl lg:text-3xl">After</h3>
                         <img src="../assets/images/aja-after.png" alt="" />
+                    </div>
+                </div>
+
+                <!--Design Process-->
+                <div class="mt-16">
+                    <h3 class="mb-3 text-2xl lg:text-3xl">Design Process</h3>
+                    <div class="relative mt-20 px-2">
+                        <div class="">
+                            <div class="start flex items-start justify-between">
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Research</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Plan</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Design</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Prototype</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Test</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Launch</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="relative z-10 flex h-10 w-10 flex-col items-center justify-center">
+                                        <div class="mb-4 flex h-full w-full flex-none items-center justify-center rounded-full bg-[#BD9456]/[0.2]"><div class="z-20 h-4 w-4 flex-none rounded-full bg-[#BD9456]"></div></div>
+                                        <div class="uppercase tracking-widest">Optimize</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="absolute left-[30px] right-[30px] top-[-1px]">
+                            <div class="absolute bottom-auto h-0.5 w-full bg-[#BD9456]"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -365,7 +428,7 @@
             </div>
         </div>
 
-        <!--Conslusion-->
+        <!--Conclusion-->
         <div class="bg-dark py-16 text-white lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">04. Conclusion</p>
@@ -399,31 +462,35 @@
             </div>
         </div>
 
-        <!--Banner 2-->
-        <!-- <div class="h-screen bg-[url('../images/amooma-banner2.png')] bg-cover bg-fixed bg-center bg-no-repeat"></div> -->
-
         <!--Suggestions-->
         <div class="bg-primary">
             <div class="rounded-b-3xl bg-white py-16 lg:rounded-b-[80px] lg:py-32">
                 <div class="mx-auto max-w-7xl px-4">
                     <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
-                    <div class="grid grid-cols-1 justify-between gap-y-8 md:grid-cols-2">
-                        <div class="flex items-center gap-x-5 lg:gap-x-8">
-                            <a href="amooma"><img src="../assets/images/amooma-web.jpg" alt="" class="h-32 rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                    <div class="grid grid-cols-1 justify-between gap-x-8 gap-y-8 md:grid-cols-2">
+                        <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                            <a href="ad"><img src="../assets/images/ad-web.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
-                                <a href="amooma" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-3xl"></i> Previous </a>
-                                <a href="amooma" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Amooma</h3></a>
-                                <a href="amooma" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2020</p></a>
+                                <a href="ad" class="mb-2 inline-flex items-center rounded-full text-sm uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-xl"></i> Previous </a>
+                                <a href="ad" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Optimizing Design and Code for anydone: Crafting a Responsive, Pixel-Perfect Web Experience</h3></a>
+                                <a href="ad" class="uppercase hover:text-primary"
+                                    ><p class="mb-4 flex items-center font-light uppercase tracking-widest">
+                                        SaaS, Productivity <span class="ml-4 border-l pl-4"><img src="../assets/images/flag-USA.avif" alt="" class="h-6" /></span></p
+                                ></a>
                             </div>
                         </div>
+
                         <div class="text-right">
                             <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
-                                    <a href="insellerate" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
-                                    <a href="insellerate" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
-                                    <a href="insellerate" class="uppercase hover:text-primary"><p>Mobile App Design • 2019</p></a>
+                                    <a href="the-cliff-nepal" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
+                                    <a href="the-cliff-nepal" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Elevating Adventure Tourism: Designing a Breathtaking Digital Experience for The Cliff Nepal</h3></a>
+                                    <a href="the-cliff-nepal" class="uppercase hover:text-primary"
+                                        ><p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                            Travel, Tourism <span class="ml-4 border-l pl-4"><img src="../assets/images/nepal-flag.svg" alt="" class="h-6" /></span></p
+                                    ></a>
                                 </div>
-                                <a href="insellerate"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="the-cliff-nepal"><img src="../assets/images/cliff-showcase.jpg" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
