--- a/works/amooma.html
+++ b/works/amooma.html
@@ -327,7 +327,7 @@
             </div>
         </div>
 
-        <!--Conslusion-->
+        <!--Conclusion-->
         <div class="bg-dark py-16 text-white lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <p class="mb-4 uppercase tracking-widest">04. Conclusion</p>
