--- a/index.html
+++ b/index.html
@@ -250,16 +250,58 @@
                 <h1 class="mb-4 text-center text-4xl text-white lg:mb-10 lg:text-6xl">Showcase of Selected Projects</h1>
                 <div class="grid grid-cols-1 gap-y-8 text-left lg:mt-16 lg:grid-cols-2 lg:gap-x-12 lg:gap-y-12">
                     <!--Insellerate-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 hover:bg-blue-100">
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p>
-                                <p class="uppercase">Mobile App DESIGN &bull; 2020</p>
-                                <p class="heading-font mb-4 text-3xl">Insellerate</p>
+                                <!-- <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p> -->
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS, Mortgage CRM <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Insellerate — Revolutionizing Mortgage Applications with User-Centric Mobile Design</h3>
                             </div>
                             <img src="assets/images/insellerate.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
                         <a href="works/insellerate" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                        <div class="absolute bottom-8 left-0 bg-primary px-8 py-4">
+                            <h3 class="text-3xl">+ 800%</h3>
+                            <p>increase in new borrower applications</p>
+                        </div>
+                    </div>
+
+                    <!--Patientmatic-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-indigo-100">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <!-- <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p> -->
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS, Healthcare <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Patientmatic — Driving Practice Growth with Instant Online Presence and Seamless Patient Booking</h3>
+                            </div>
+                            <img src="assets/images/patientmatci-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/patientmatic" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                    </div>
+
+                    <!--anydone-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <!-- <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p> -->
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    SaaS, Productivity <span class="ml-4 border-l pl-4"><img src="assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Optimizing Design and Code for anydone: Crafting a Responsive, Pixel-Perfect Web Experience</h3>
+                            </div>
+                            <img src="assets/images/ad-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/ad" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
@@ -269,48 +311,15 @@
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#E5E3D6]">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2024</p>
-                                <p class="heading-font mb-4 text-3xl">Aja Dynasty</p>
+                                <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                    B2C, E-Commerce <span class="ml-4 border-l pl-4"><img src="assets/images/nepal-flag.svg" alt="" class="h-6" /></span>
+                                </p>
+                                <h3 class="mb-4 text-2xl">Redefining B2C Shopping for Aja Dynasty: A User-Centric Approach to Seamless E-commerce Design</h3>
                             </div>
                             <img src="assets/images/aja-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
                         <a href="works/aja-dynasty" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
-                            <img src="assets/images/view-project-white.svg" alt="" />
-                        </div>
-                    </div>
-
-                    
-
-                    <!--The Cliff Nepal-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 hover:bg-lime-50">
-                        <div class="overflow-hidden rounded-br-3xl">
-                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2023</p>
-                                <p class="heading-font mb-4 text-3xl">The Cliff Nepal</p>
-                            </div>
-                            <img src="assets/images/cliff-showcase.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
-                        </div>
-                        <a href="works/the-cliff-nepal" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
-                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
-                            <img src="assets/images/view-project-white.svg" alt="" />
-                        </div>
-                    </div>
-
-                    <!--Amooma-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 hover:bg-cyan-50">
-                        <div class="overflow-hidden rounded-br-3xl">
-                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2020</p>
-                                <p class="heading-font mb-4 text-3xl">Amooma</p>
-                            </div>
-                            <img src="assets/images/amooma-web.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
-                        </div>
-                        <a href="works/amooma" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
-                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
                     </div>
