--- a/works/hydro-steam-nw.html
+++ b/works/hydro-steam-nw.html
@@ -81,7 +81,10 @@
             <div class="home-hero relative rounded-b-3xl bg-[#2F86C0] bg-center bg-no-repeat px-4 pt-32 lg:rounded-b-[80px]">
                 <!--Caption-->
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center pt-20 text-center text-white">
-                    <h1 class="mb-16 text-3xl font-bold md:text-5xl xl:text-8xl">Hydro Steam Northwest</h1>
+                    <p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                        Cleaning <span class="ml-4 border-l pl-4"><img src="../assets/images/flag-USA.avif" alt="" class="h-6" /></span>
+                    </p>
+                    <h1 class="mx-auto mb-16 max-w-5xl text-center text-3xl font-bold !leading-snug md:text-5xl xl:text-5xl">Designing Hydro Steam NW: Crafting an Engaging Web Experience for a Leading Local Business</h1>
                     <img src="../assets/images/hydrosteam-web.png" alt="" class="rounded-t-lg" />
                 </div>
             </div>
@@ -91,14 +94,14 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
-                    <div class="md:col-start-1 md:col-span-6">
+                    <div class="md:col-span-6 md:col-start-1">
                         <p class="mb-4 uppercase tracking-widest">About the Project</p>
                         <h1 class="mb-4 text-4xl lg:text-6xl">Project Background</h1>
                         <p class="mb-4">Hydro Steam Northwest is a family-owned and locally operated cleaning company providing superior and affordable cleaning services for your House, Apartment, Studio or Office.</p>
                         <p class="mb-4">My role was to design the website that is clean and has an intuitive layout to provide seamless experience to their customers and attract more customers to their business. I had to create a website with clean code which should be easy to update.</p>
                         <a href="https://hydrosteamnw.com/" class="mt-8 inline-flex h-[52px] items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">View Live Website <i class="las la-arrow-right ml-2 -rotate-45 text-3xl"></i></a>
                     </div>
-                    <div class="md:col-end-13 md:col-span-5">
+                    <div class="md:col-span-5 md:col-end-13">
                         <div class="mb-8">
                             <p class="mb-4 uppercase tracking-widest">Agency</p>
                             <p>Clickagee</p>
@@ -380,24 +383,30 @@
             <div class="rounded-b-3xl bg-white py-16 lg:rounded-b-[80px] lg:py-32">
                 <div class="mx-auto max-w-7xl px-4">
                     <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
-                    <div class="grid grid-cols-1 justify-between gap-y-8 md:grid-cols-2">
-                        <div class="flex items-center gap-x-5 lg:gap-x-8">
-                            <a href="amooma"><img src="../assets/images/amooma-web.jpg" alt="" class="h-32 rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                    <div class="grid grid-cols-1 justify-between gap-x-8 gap-y-8 md:grid-cols-2">
+                        <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
+                            <a href="the-cliff-nepal"><img src="../assets/images/cliff-showcase.jpg" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
-                                <a href="amooma" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-3xl"></i> Previous </a>
-                                <a href="amooma" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Amooma</h3></a>
-                                <a href="amooma" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2020</p></a>
+                                <a href="the-cliff-nepal" class="mb-2 inline-flex items-center rounded-full text-sm uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-xl"></i> Previous </a>
+                                <a href="the-cliff-nepal" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Elevating Adventure Tourism: Designing a Breathtaking Digital Experience for The Cliff Nepal</h3></a>
+                                <a href="the-cliff-nepal" class="uppercase hover:text-primary"
+                                    ><p class="mb-4 flex items-center font-light uppercase tracking-widest">
+                                        Travel, Tourism <span class="ml-4 border-l pl-4"><img src="../assets/images/nepal-flag.svg" alt="" class="h-6" /></span></p
+                                ></a>
                             </div>
                         </div>
+
                         <div class="text-right">
                             <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
-                                    <a href="source-taggers" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
-                                    <a href="source-taggers" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Source Taggers</h3></a>
-                                    <a href="source-taggers" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2018</p></a>
-                                    
+                                    <a href="insellerate" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
+                                    <a href="insellerate" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-xl">Insellerate — Revolutionizing Mortgage Applications with User-Centric Mobile Design</h3></a>
+                                    <a href="insellerate" class="uppercase hover:text-primary"
+                                        ><p class="mb-4 flex items-center justify-end font-light uppercase tracking-widest">
+                                            SaaS, Mortgage CRM <span class="ml-4 border-l pl-4"><img src="../assets/images/flag-USA.avif" alt="" class="h-6" /></span></p
+                                    ></a>
                                 </div>
-                                <a href="source-taggers"><img src="../assets/images/sourcetaggers-web.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="insellerate"><img src="../assets/images/insellerate.png" alt="" class="h-36 max-w-fit rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
